feat: add ProductionResource and RawMaterialResource for managing production plans and raw materials